--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
         <!-- replace this icon with your own icon -->
         <link rel="icon" href="../src/icons/sitelogo.ico"/>
         <link rel="shortcut icon" href="../src/icons/sitelogo.ico"/>
-        <link rel="manifest" href="../src/assets/manifest.json"/>
+        <!-- you can edit the manifest -->
+        <link rel="manifest" href="../src/assets/manifest/manifest.json"/>
     </head>
     <body>
         <header>
